--- a/index.html
+++ b/index.html
@@ -1981,90 +1981,94 @@
                 <!-- [Amaterasu] -->
                 <b-card>
                     <p><strong><a id="Amaterasu" href="javascript:void(0)" @click="show_guide_devil('Amaterasu')">Amaterasu</a></strong></p>
-                    <p>One of the best buffers in the game due to her unique skill Tenson Kourin being buffed, Tenson
-                       Kourin has the same effect as Luster Candy but casts Dekunda beforehand so you'd always have 3
-                       buffs on you. She also has really high magic for healing and magic damage.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td>TO DO: <b>Auto-Sukuka</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td>TO DO: <b>Trisagion</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td><b>Mediarahan</b> is a very good healing skill, with a reduced MP cost. Makes her a really good support/healing unit.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td>TO DO: <b>Magic Amp III</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td><b>Null Elec</b> covers her weakness, allowing you to build her in a more damaging support role, since you'd have two slots to customize.</td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>
+                    <p>One of the best buffers due to her unique skill Tenson Kourin (TK), it has the same effect as Luster Candy but casts Dekunda beforehand so you'd always have 3
+                       buffs on you whenever you cast it. Naturally she repels fire and resists light (weak to elec), comes with Maragion, Tarunda also has really 
+                       high magic for healing and magic damage. You could build her as a buffer + healer (Yellow) or buffer + whatever you like (Teal).
+                    </p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Auto-Sukuka</b> can work okay on her, but Tenson-Kourin would be your goto source for buffing/clearing debuffs anyways.</td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Trisagion</b> gives her a single target fire skill, she already has Maragion so if you do want to use her as a caster 
+                                  it'd be better getting another spell for coverage.</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Mediarahan</b> is a very good healing skill and is only usable with the reduced MP cost (8). This makes her a really good support/healing unit, 
+                              though on auto the AI can be quite funky in making decisions with her.</td>
+                              <td><b>Best</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td><b>Magic Amp III</b> increases her base magic for min maxing. She has better archetypes to use, but you can run this if you want a dps oriented Amaterasu.</td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Null Elec</b> covers her weakness, allowing you to mold her into another role, since you'd have two slots to customize.</td>
+                              <td>Usable</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Elec to cover weakness</li>
+                        <li>Resist Elec. If not Teal to cover weakness</li>
                         <li>Samarecarm for more support</li>
-                        <li>Megido/la/laon for a damaging spell to take advantage of her magic</li>
-                        <li>Any other magic elements</li>
+                        <li>Megido/Megidola/Megidolaon. Can be a damaging spell to take advantage of her magic</li>
+                        <li>Any other magic element</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine Type to enable Tenson Kourin casts and Mediarahan if yellow.</p>
+                    <p><strong>Brands:</strong> Divine for two turn Tenson Kourin casts and Mediarahan when Yellow.</p>
                 </b-card>
                 <!-- [Ishtar] -->
                 <b-card>
                     <p><strong><a id="Ishtar" href="javascript:void(0)" @click="show_guide_devil('Ishtar')">Ishtar</a></strong></p>
-                    <p>Second strongest caster in the game with a unique skill Mesopotamian Star, hitting all enemies
-                        casting Tarukaja and Taruna. She's mainly used for a sweeping Jack Bros team with the Yellow
-                        Archetype but can also be used in Sloth 10 due to having Mahamaon. Concentrate, get the Jacks
-                        to
-                        tag then Mesopotamian to hopefully one shot the enemy or weaken them enough to finish them off
-                        the next turn/on the same turn. She comes with two weaknesses so there isn't that much
-                        customization available.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td>TO DO: <b>Samarecarm</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td>TO DO: <b>Thunderclap</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td><b>Concentrate</b> allows her to work with Templar Dragon + Jack Bros strategies to nuke.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td>TO DO: <b>Tetraka Shift</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td><b>Null Force</b> covers a weakness and gives you the freedom to customize another skill slot. If you got
-                                            Concentrate from the skill gacha this would technically be a viable archetype.</td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>
+                    <p>Second strongest caster in the game with Mahamaon, Diarahan and her unique skill Mesopotamian Star: almighty aoe 
+                        casting Tarukaja and Tarunda when it lands. She's mainly used for a sweeping Jack Bros team in pvp with Yellow
+                        Archetype but can also be used in Sloth 10 due to having Mahamaon. She comes with two weaknesses however so there isn't 
+                        that much customization available, in her case its not really needed as Mesopotamian Star should be more then enough.
+                    </p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Samarecarm</b> gives her a revival skill. This is really easy to transfer (through Isis) and even so she's better 
+                                  suited as dps rather than support/healer.
+                              </td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Thunderclap</b> gives her a Hecatoncheires slaying skill (plus for Sloth 10 too). If you don't want to use her in a Jack 
+                              Bros team this is an okay route to take since Mesopotamian Star handles coverage.</td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Concentrate</b> allows her to work with Templar Dragon + Jack Bros strategies to nuke. When she does nuke the tarunda effect would help 
+                              mitigate counter attack damage (in the case you don't finish them off).</td>
+                              <td><b>Best</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td><b>Tetraka Shift</b> used to be great in pvp but due to the rise of phys pierce its not prevalent anymore.</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Null Force</b> covers a weakness and gives you the freedom to customize another skill slot. If you're planning to 
+                              transfer concentrate, yellow would still be better because of the -1mp cost it entails</td>
+                              <td>Usable</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
-                        <li>Resist Dark to cover her weakness</li>
-                        <li>Resist Force if not teal</li>
+                        <li>Resist Dark. To cover her weakness</li>
+                        <li>Resist Force. If not teal</li>
                         <li>Whatever you like if Teal, her base kit is technically good enough. You can go Endure for
-                            survival or another element as well if you wished.</li>
+                            survival or another element as well if you wish.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine Type to ensure Mesopotamian Star casts. I do believe Magic Type
-                        can work if you maxed our her skill for the reduced mp costs.</p>
+                    <p><strong>Brands:</strong> Divine for Jack Bros setup with her Yellow version. Spell can work for Teal.</p>
                 </b-card>
                 <!-- [Susano-o] -->
                 <b-card>
