Demon Guide: Fixed missing rating for Cu Chulainn

--- a/index.html
+++ b/index.html
@@ -2237,7 +2237,7 @@
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
                               <td><b>Repel Dark</b> won't do much for him. He doesn't have any weakness and so he doesn't need the dark repel.</td>
-                              <td></td>
+                              <td>Bad</td>
                           </tr>
                         </tbody>
                       </table></p>
