Demon Guide: Fixed spelling error
- Auto-Rakuga -> Auto-Rakuka

--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                                   <br>
                                   Given he's attack AI he can't act as a buff/debuffer to take advantage of skills like Fog/Acid Breath and War Cry so this is
                                   one way to make him a buffer at least.
-                                  <br><b>Auto-Rakuga</b> is always nice to boost up your starting defence without having to spend a turn casting Rakukaja. 
+                                  <br><b>Auto-Rakuka</b> is always nice to boost up your starting defence without having to spend a turn casting Rakukaja. 
                               </td>
                               <td>Usable</td>
                           </tr>
