--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@
                 <!-- [Seth] -->
                 <b-card>
                     <p><strong><a id="Seth" href="javascript:void(0)" @click="show_guide_devil('Seth')">Seth</a></strong></p>
-                    <p>Second strongest demon in the game (losing out to an angry red man), coming with Debilitate (All debuffs in one), Zandyne and his unique skill Ouas 
+                    <p>Second highest ATK in the game (losing out to an angry red man), coming with Debilitate (All debuffs in one), Zandyne and his unique skill Ouas 
                       (really high single target phys damage, excellent crit rate, with an added 40% healing based on damage done). He's built to be a single target sniping unit.
                     </p>
                     <div id="DemonGuideTable">
