--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
 
             <b-collapse is-nav id="nav_collapse">
                 <b-navbar-nav>
-                    <b-nav-item href="#" @click="route('fusion.devil')" :active="isRoute('fusion.devil')">{{
-                        $t('message.devil') }}</b-nav-item>
+                    <b-nav-item href="#" @click="route('fusion.devil')" :active="isRoute('fusion.devil')">Demons</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.fission')" :active="isRoute('fusion.fission')">{{
                         $t('message.reverse_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('fusion.fusion')" :active="isRoute('fusion.fusion')">{{
                         $t('message.normal_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('skill')" :active="isRoute('skill')">{{ $t('message.skill') }}</b-nav-item>
-                    <b-nav-item href="#" @click="route('guide')" :active="isRoute('guide')">Demon Guide</b-nav-item>
+                    <b-nav-item href="#" @click="route('guide')" :active="isRoute('guide')">Advanced Guide: Demons</b-nav-item>
                 </b-navbar-nav>
                 <b-navbar-nav class="ml-auto">
                     <b-nav-form action="#" class="d-none d-md-block">
@@ -337,7 +336,7 @@
             <!-- index_main : 5 guide -->
 
             <b-tab no-body class="p-2">
-                <h4 style="text-align: center;">Azuraki's Notes</h4>
+                <h4 style="text-align: center;">Azuraki's Notes on 5* Demons</h4>
                 <ul>
                   <li>This is a guide for all 5* demons in the game when you want to fuse them/archetype change. </li>
                   <li>Its focus is in analyzing and discussing what are good/bad archetypes
